// Package orchestrator implements sandbox lifecycle management.
// It coordinates between the host registry, the gRPC stream handler,
// and the persistent store to create, manage, and destroy sandboxes.
package orchestrator

import (
	"context"
	"crypto/rand"
	"encoding/hex"
	"fmt"
	"log/slog"
	"strings"
	"time"

	fluidv1 "github.com/aspectrr/fluid.sh/proto/gen/go/fluid/v1"

	"github.com/aspectrr/fluid.sh/control-plane/internal/api"
	"github.com/aspectrr/fluid.sh/control-plane/internal/registry"
	"github.com/aspectrr/fluid.sh/control-plane/internal/store"
	"github.com/aspectrr/fluid.sh/control-plane/internal/store/postgres"

	"github.com/google/uuid"
)

// HostSender abstracts the ability to send a ControlMessage to a specific host
// and wait for a correlated response. This is implemented by the gRPC
// StreamHandler but defined here to avoid circular imports.
type HostSender interface {
	SendAndWait(hostID string, msg *fluidv1.ControlMessage, timeout time.Duration) (*fluidv1.HostMessage, error)
}

// Orchestrator coordinates sandbox lifecycle operations across connected hosts.
type Orchestrator struct {
	registry   *registry.Registry
	store      *postgres.Store
	sender     HostSender
	logger     *slog.Logger
	defaultTTL time.Duration
}

// New creates an Orchestrator. The sender is typically the gRPC StreamHandler.
func New(
	reg *registry.Registry,
	st *postgres.Store,
	sender HostSender,
	logger *slog.Logger,
	defaultTTL time.Duration,
) *Orchestrator {
	if logger == nil {
		logger = slog.Default()
	}
	return &Orchestrator{
		registry:   reg,
		store:      st,
		sender:     sender,
		logger:     logger.With("component", "orchestrator"),
		defaultTTL: defaultTTL,
	}
}

// ---------------------------------------------------------------------------
// Sandbox lifecycle
// ---------------------------------------------------------------------------

// CreateSandbox selects a host, sends a CreateSandboxCommand over the gRPC
// stream, waits for the SandboxCreated response, and persists the sandbox.
func (o *Orchestrator) CreateSandbox(ctx context.Context, req api.CreateSandboxRequest) (*store.Sandbox, error) {
	sandboxID := generateSandboxID()

	baseImage := req.BaseImage
	if baseImage == "" && req.SourceVM != "" {
		// When only source_vm is provided, use it as the lookup key for host
		// selection. The host resolves the actual base image from the source VM.
		baseImage = req.SourceVM
	}

	host, err := SelectHost(o.registry, baseImage)
	if err != nil {
		// Fallback: try selecting by source VM if base image selection failed.
		if req.SourceVM != "" {
			host, err = SelectHostForSourceVM(o.registry, req.SourceVM)
			if err != nil {
				return nil, fmt.Errorf("select host: %w", err)
			}
		} else {
			return nil, fmt.Errorf("select host: %w", err)
		}
	}

	vcpus := int32(req.VCPUs)
	if vcpus == 0 {
		vcpus = 2
	}
	memMB := int32(req.MemoryMB)
	if memMB == 0 {
		memMB = 2048
	}
	ttlSeconds := int32(req.TTLSeconds)
	if ttlSeconds == 0 && o.defaultTTL > 0 {
		ttlSeconds = int32(o.defaultTTL.Seconds())
	}

	name := req.Name
	if name == "" {
		name = "sbx-" + sandboxID[4:12] // strip "SBX-" prefix and take 8 chars
	}

	reqID := uuid.New().String()
	cmd := &fluidv1.ControlMessage{
		RequestId: reqID,
		Payload: &fluidv1.ControlMessage_CreateSandbox{
			CreateSandbox: &fluidv1.CreateSandboxCommand{
				SandboxId:  sandboxID,
				BaseImage:  req.BaseImage,
				Name:       name,
				Vcpus:      vcpus,
				MemoryMb:   memMB,
				TtlSeconds: ttlSeconds,
				AgentId:    req.AgentID,
				Network:    req.Network,
				SourceVm:   req.SourceVM,
			},
		},
	}

	o.logger.Info("creating sandbox",
		"sandbox_id", sandboxID,
		"host_id", host.HostID,
		"base_image", req.BaseImage,
		"source_vm", req.SourceVM,
	)

	resp, err := o.sender.SendAndWait(host.HostID, cmd, 5*time.Minute)
	if err != nil {
		return nil, fmt.Errorf("create sandbox on host %s: %w", host.HostID, err)
	}

	created := resp.GetSandboxCreated()
	if created == nil {
		// Check if the host reported an error instead.
		if errReport := resp.GetErrorReport(); errReport != nil {
			return nil, fmt.Errorf("host error: %s", errReport.GetError())
		}
		return nil, fmt.Errorf("unexpected response type from host")
	}

	sandbox := &store.Sandbox{
		ID:         sandboxID,
		HostID:     host.HostID,
		Name:       created.GetName(),
		AgentID:    req.AgentID,
		BaseImage:  req.BaseImage,
		Bridge:     created.GetBridge(),
		MACAddress: created.GetMacAddress(),
		IPAddress:  created.GetIpAddress(),
		State:      store.SandboxState(created.GetState()),
		VCPUs:      vcpus,
		MemoryMB:   memMB,
		TTLSeconds: ttlSeconds,
		SourceVM:   req.SourceVM,
	}

	if err := o.store.CreateSandbox(ctx, sandbox); err != nil {
		return nil, fmt.Errorf("persist sandbox: %w", err)
	}

	o.logger.Info("sandbox created",
		"sandbox_id", sandboxID,
		"host_id", host.HostID,
		"ip_address", created.GetIpAddress(),
	)

	return sandbox, nil
}

// GetSandbox retrieves a sandbox by ID from the persistent store.
func (o *Orchestrator) GetSandbox(ctx context.Context, id string) (*store.Sandbox, error) {
	return o.store.GetSandbox(ctx, id)
}

// ListSandboxes returns all non-deleted sandboxes.
func (o *Orchestrator) ListSandboxes(ctx context.Context) ([]*store.Sandbox, error) {
	sandboxes, err := o.store.ListSandboxes(ctx)
	if err != nil {
		return nil, err
	}
	result := make([]*store.Sandbox, len(sandboxes))
	for i := range sandboxes {
		result[i] = &sandboxes[i]
	}
	return result, nil
}

// DestroySandbox sends a destroy command to the host and marks the sandbox
// as destroyed in the store.
func (o *Orchestrator) DestroySandbox(ctx context.Context, sandboxID string) error {
	sandbox, err := o.store.GetSandbox(ctx, sandboxID)
	if err != nil {
		return fmt.Errorf("get sandbox: %w", err)
	}

	reqID := uuid.New().String()
	cmd := &fluidv1.ControlMessage{
		RequestId: reqID,
		Payload: &fluidv1.ControlMessage_DestroySandbox{
			DestroySandbox: &fluidv1.DestroySandboxCommand{
				SandboxId: sandboxID,
			},
		},
	}

	resp, err := o.sender.SendAndWait(sandbox.HostID, cmd, 2*time.Minute)
	if err != nil {
		return fmt.Errorf("destroy sandbox on host %s: %w", sandbox.HostID, err)
	}

	if destroyed := resp.GetSandboxDestroyed(); destroyed == nil {
		if errReport := resp.GetErrorReport(); errReport != nil {
			return fmt.Errorf("host error: %s", errReport.GetError())
		}
		return fmt.Errorf("unexpected response type from host")
	}

	if err := o.store.DeleteSandbox(ctx, sandboxID); err != nil {
		return fmt.Errorf("delete sandbox from store: %w", err)
	}

	o.logger.Info("sandbox destroyed", "sandbox_id", sandboxID)
	return nil
}

// RunCommand sends a command to execute in a sandbox and persists the result.
func (o *Orchestrator) RunCommand(ctx context.Context, sandboxID, command string, timeoutSec int) (*store.Command, error) {
	sandbox, err := o.store.GetSandbox(ctx, sandboxID)
	if err != nil {
		return nil, fmt.Errorf("get sandbox: %w", err)
	}

	if timeoutSec == 0 {
		timeoutSec = 300 // 5 minute default
	}

	reqID := uuid.New().String()
	cmd := &fluidv1.ControlMessage{
		RequestId: reqID,
		Payload: &fluidv1.ControlMessage_RunCommand{
			RunCommand: &fluidv1.RunCommandCommand{
				SandboxId:      sandboxID,
				Command:        command,
				TimeoutSeconds: int32(timeoutSec),
			},
		},
	}

	startedAt := time.Now()

	resp, err := o.sender.SendAndWait(sandbox.HostID, cmd, time.Duration(timeoutSec+30)*time.Second)
	if err != nil {
		return nil, fmt.Errorf("run command on host %s: %w", sandbox.HostID, err)
	}

	result := resp.GetCommandResult()
	if result == nil {
		if errReport := resp.GetErrorReport(); errReport != nil {
			return nil, fmt.Errorf("host error: %s", errReport.GetError())
		}
		return nil, fmt.Errorf("unexpected response type from host")
	}

	cmdRecord := &store.Command{
		ID:         uuid.New().String(),
		SandboxID:  sandboxID,
		Command:    command,
		Stdout:     result.GetStdout(),
		Stderr:     result.GetStderr(),
		ExitCode:   result.GetExitCode(),
		DurationMS: result.GetDurationMs(),
		StartedAt:  startedAt,
		EndedAt:    time.Now(),
	}

	if err := o.store.CreateCommand(ctx, cmdRecord); err != nil {
		o.logger.Error("failed to persist command", "sandbox_id", sandboxID, "error", err)
	}

	return cmdRecord, nil
}

// StartSandbox sends a start command to the host.
func (o *Orchestrator) StartSandbox(ctx context.Context, sandboxID string) error {
	sandbox, err := o.store.GetSandbox(ctx, sandboxID)
	if err != nil {
		return fmt.Errorf("get sandbox: %w", err)
	}

	reqID := uuid.New().String()
	cmd := &fluidv1.ControlMessage{
		RequestId: reqID,
		Payload: &fluidv1.ControlMessage_StartSandbox{
			StartSandbox: &fluidv1.StartSandboxCommand{
				SandboxId: sandboxID,
			},
		},
	}

	resp, err := o.sender.SendAndWait(sandbox.HostID, cmd, 2*time.Minute)
	if err != nil {
		return fmt.Errorf("start sandbox on host %s: %w", sandbox.HostID, err)
	}

	started := resp.GetSandboxStarted()
	if started == nil {
		if errReport := resp.GetErrorReport(); errReport != nil {
			return fmt.Errorf("host error: %s", errReport.GetError())
		}
		return fmt.Errorf("unexpected response type from host")
	}

	// Update the sandbox state and IP in the store.
	sandbox.State = store.SandboxState(started.GetState())
	sandbox.IPAddress = started.GetIpAddress()
	if err := o.store.UpdateSandbox(ctx, sandbox); err != nil {
		o.logger.Error("failed to update sandbox after start", "sandbox_id", sandboxID, "error", err)
	}

	return nil
}

// StopSandbox sends a stop command to the host.
func (o *Orchestrator) StopSandbox(ctx context.Context, sandboxID string) error {
	sandbox, err := o.store.GetSandbox(ctx, sandboxID)
	if err != nil {
		return fmt.Errorf("get sandbox: %w", err)
	}

	reqID := uuid.New().String()
	cmd := &fluidv1.ControlMessage{
		RequestId: reqID,
		Payload: &fluidv1.ControlMessage_StopSandbox{
			StopSandbox: &fluidv1.StopSandboxCommand{
				SandboxId: sandboxID,
			},
		},
	}

	resp, err := o.sender.SendAndWait(sandbox.HostID, cmd, 2*time.Minute)
	if err != nil {
		return fmt.Errorf("stop sandbox on host %s: %w", sandbox.HostID, err)
	}

	stopped := resp.GetSandboxStopped()
	if stopped == nil {
		if errReport := resp.GetErrorReport(); errReport != nil {
			return fmt.Errorf("host error: %s", errReport.GetError())
		}
		return fmt.Errorf("unexpected response type from host")
	}

	sandbox.State = store.SandboxState(stopped.GetState())
	if err := o.store.UpdateSandbox(ctx, sandbox); err != nil {
		o.logger.Error("failed to update sandbox after stop", "sandbox_id", sandboxID, "error", err)
	}

	return nil
}

// CreateSnapshot sends a snapshot command to the host.
func (o *Orchestrator) CreateSnapshot(ctx context.Context, sandboxID, name string) (*api.SnapshotResponse, error) {
	sandbox, err := o.store.GetSandbox(ctx, sandboxID)
	if err != nil {
		return nil, fmt.Errorf("get sandbox: %w", err)
	}

	reqID := uuid.New().String()
	cmd := &fluidv1.ControlMessage{
		RequestId: reqID,
		Payload: &fluidv1.ControlMessage_CreateSnapshot{
			CreateSnapshot: &fluidv1.SnapshotCommand{
				SandboxId:    sandboxID,
				SnapshotName: name,
			},
		},
	}

	resp, err := o.sender.SendAndWait(sandbox.HostID, cmd, 5*time.Minute)
	if err != nil {
		return nil, fmt.Errorf("create snapshot on host %s: %w", sandbox.HostID, err)
	}

	created := resp.GetSnapshotCreated()
	if created == nil {
		if errReport := resp.GetErrorReport(); errReport != nil {
			return nil, fmt.Errorf("host error: %s", errReport.GetError())
		}
		return nil, fmt.Errorf("unexpected response type from host")
	}

	return &api.SnapshotResponse{
		SnapshotID:   created.GetSnapshotId(),
		SandboxID:    sandboxID,
		SnapshotName: created.GetSnapshotName(),
		CreatedAt:    time.Now(),
	}, nil
}

// ListCommands returns all commands for a given sandbox.
func (o *Orchestrator) ListCommands(ctx context.Context, sandboxID string) ([]*store.Command, error) {
	commands, err := o.store.ListSandboxCommands(ctx, sandboxID)
	if err != nil {
		return nil, err
	}
	result := make([]*store.Command, len(commands))
	for i := range commands {
		result[i] = &commands[i]
	}
	return result, nil
}

// ---------------------------------------------------------------------------
// Host operations
// ---------------------------------------------------------------------------

// ListHosts returns info about all connected hosts.
func (o *Orchestrator) ListHosts(ctx context.Context) ([]*api.HostInfo, error) {
	connected := o.registry.ListConnected()
	result := make([]*api.HostInfo, 0, len(connected))

	for _, h := range connected {
		info := &api.HostInfo{
			HostID:        h.HostID,
			Hostname:      h.Hostname,
			Status:        "ONLINE",
			LastHeartbeat: h.LastHeartbeat.Format(time.RFC3339),
		}
		if h.Registration != nil {
			info.AvailableCPUs = h.Registration.GetAvailableCpus()
			info.AvailableMemMB = h.Registration.GetAvailableMemoryMb()
			info.AvailableDiskMB = h.Registration.GetAvailableDiskMb()
			info.BaseImages = h.Registration.GetBaseImages()
		}

		// Count active sandboxes for this host from the store.
		sandboxes, err := o.store.GetSandboxesByHostID(ctx, h.HostID)
		if err == nil {
			info.ActiveSandboxes = len(sandboxes)
		}

		result = append(result, info)
	}

	return result, nil
}

// GetHost returns info about a specific connected host.
func (o *Orchestrator) GetHost(ctx context.Context, id string) (*api.HostInfo, error) {
	h, ok := o.registry.GetHost(id)
	if !ok {
		return nil, fmt.Errorf("host %s not found or not connected", id)
	}

	info := &api.HostInfo{
		HostID:        h.HostID,
		Hostname:      h.Hostname,
		Status:        "ONLINE",
		LastHeartbeat: h.LastHeartbeat.Format(time.RFC3339),
	}
	if h.Registration != nil {
		info.AvailableCPUs = h.Registration.GetAvailableCpus()
		info.AvailableMemMB = h.Registration.GetAvailableMemoryMb()
		info.AvailableDiskMB = h.Registration.GetAvailableDiskMb()
		info.BaseImages = h.Registration.GetBaseImages()
	}

	sandboxes, err := o.store.GetSandboxesByHostID(ctx, h.HostID)
	if err == nil {
		info.ActiveSandboxes = len(sandboxes)
	}

	return info, nil
}

// ---------------------------------------------------------------------------
// Source VM operations
// ---------------------------------------------------------------------------

// ListVMs aggregates source VMs from all connected hosts.
func (o *Orchestrator) ListVMs(ctx context.Context) ([]*api.VMInfo, error) {
	connected := o.registry.ListConnected()
	var result []*api.VMInfo

	for _, h := range connected {
		if h.Registration == nil {
			continue
		}

		// Ask each host for its current VM list.
		reqID := uuid.New().String()
		cmd := &fluidv1.ControlMessage{
			RequestId: reqID,
			Payload: &fluidv1.ControlMessage_ListSourceVms{
				ListSourceVms: &fluidv1.ListSourceVMsCommand{},
			},
		}

		resp, err := o.sender.SendAndWait(h.HostID, cmd, 30*time.Second)
		if err != nil {
			o.logger.Warn("failed to list VMs from host", "host_id", h.HostID, "error", err)
			// Fall back to registration data.
			for _, vm := range h.Registration.GetSourceVms() {
				result = append(result, &api.VMInfo{
					Name:      vm.GetName(),
					State:     vm.GetState(),
					IPAddress: vm.GetIpAddress(),
					Prepared:  vm.GetPrepared(),
					HostID:    h.HostID,
				})
			}
			continue
		}

		vmList := resp.GetSourceVmsList()
		if vmList != nil {
			for _, vm := range vmList.GetVms() {
				result = append(result, &api.VMInfo{
					Name:      vm.GetName(),
					State:     vm.GetState(),
					IPAddress: vm.GetIpAddress(),
					Prepared:  vm.GetPrepared(),
					HostID:    h.HostID,
				})
			}
		}
	}

	return result, nil
}

// PrepareSourceVM sends a prepare command to the host that owns the source VM.
func (o *Orchestrator) PrepareSourceVM(ctx context.Context, vmName, sshUser, keyPath string) (any, error) {
	host, err := SelectHostForSourceVM(o.registry, vmName)
	if err != nil {
		return nil, err
	}

	reqID := uuid.New().String()
	cmd := &fluidv1.ControlMessage{
		RequestId: reqID,
		Payload: &fluidv1.ControlMessage_PrepareSourceVm{
			PrepareSourceVm: &fluidv1.PrepareSourceVMCommand{
				SourceVm:   vmName,
				SshUser:    sshUser,
				SshKeyPath: keyPath,
			},
		},
	}

	resp, err := o.sender.SendAndWait(host.HostID, cmd, 5*time.Minute)
	if err != nil {
		return nil, fmt.Errorf("prepare source VM on host %s: %w", host.HostID, err)
	}

	prepared := resp.GetSourceVmPrepared()
	if prepared == nil {
		if errReport := resp.GetErrorReport(); errReport != nil {
			return nil, fmt.Errorf("host error: %s", errReport.GetError())
		}
		return nil, fmt.Errorf("unexpected response type from host")
	}

	return prepared, nil
}

// ValidateSourceVM sends a validate command to the host that owns the source VM.
func (o *Orchestrator) ValidateSourceVM(ctx context.Context, vmName string) (any, error) {
	host, err := SelectHostForSourceVM(o.registry, vmName)
	if err != nil {
		return nil, err
	}

	reqID := uuid.New().String()
	cmd := &fluidv1.ControlMessage{
		RequestId: reqID,
		Payload: &fluidv1.ControlMessage_ValidateSourceVm{
			ValidateSourceVm: &fluidv1.ValidateSourceVMCommand{
				SourceVm: vmName,
			},
		},
	}

	resp, err := o.sender.SendAndWait(host.HostID, cmd, 30*time.Second)
	if err != nil {
		return nil, fmt.Errorf("validate source VM on host %s: %w", host.HostID, err)
	}

	validation := resp.GetSourceVmValidation()
	if validation == nil {
		if errReport := resp.GetErrorReport(); errReport != nil {
			return nil, fmt.Errorf("host error: %s", errReport.GetError())
		}
		return nil, fmt.Errorf("unexpected response type from host")
	}

	return validation, nil
}

// RunSourceCommand executes a read-only command on a source VM via the host.
func (o *Orchestrator) RunSourceCommand(ctx context.Context, vmName, command string, timeoutSec int) (*api.SourceCommandResult, error) {
	host, err := SelectHostForSourceVM(o.registry, vmName)
	if err != nil {
		return nil, err
	}

	if timeoutSec == 0 {
		timeoutSec = 30
	}

	reqID := uuid.New().String()
	cmd := &fluidv1.ControlMessage{
		RequestId: reqID,
		Payload: &fluidv1.ControlMessage_RunSourceCommand{
			RunSourceCommand: &fluidv1.RunSourceCommandCommand{
				SourceVm:       vmName,
				Command:        command,
				TimeoutSeconds: int32(timeoutSec),
			},
		},
	}

	resp, err := o.sender.SendAndWait(host.HostID, cmd, time.Duration(timeoutSec+30)*time.Second)
	if err != nil {
		return nil, fmt.Errorf("run source command on host %s: %w", host.HostID, err)
	}

	result := resp.GetSourceCommandResult()
	if result == nil {
		if errReport := resp.GetErrorReport(); errReport != nil {
			return nil, fmt.Errorf("host error: %s", errReport.GetError())
		}
		return nil, fmt.Errorf("unexpected response type from host")
	}

	return &api.SourceCommandResult{
		SourceVM: vmName,
		ExitCode: int(result.GetExitCode()),
		Stdout:   result.GetStdout(),
		Stderr:   result.GetStderr(),
	}, nil
}

// ReadSourceFile reads a file from a source VM via the host.
func (o *Orchestrator) ReadSourceFile(ctx context.Context, vmName, path string) (*api.SourceFileResult, error) {
	host, err := SelectHostForSourceVM(o.registry, vmName)
	if err != nil {
		return nil, err
	}

	reqID := uuid.New().String()
	cmd := &fluidv1.ControlMessage{
		RequestId: reqID,
		Payload: &fluidv1.ControlMessage_ReadSourceFile{
			ReadSourceFile: &fluidv1.ReadSourceFileCommand{
				SourceVm: vmName,
				Path:     path,
			},
		},
	}

	resp, err := o.sender.SendAndWait(host.HostID, cmd, 30*time.Second)
	if err != nil {
		return nil, fmt.Errorf("read source file on host %s: %w", host.HostID, err)
	}

	result := resp.GetSourceFileResult()
	if result == nil {
		if errReport := resp.GetErrorReport(); errReport != nil {
			return nil, fmt.Errorf("host error: %s", errReport.GetError())
		}
		return nil, fmt.Errorf("unexpected response type from host")
	}

	return &api.SourceFileResult{
		SourceVM: vmName,
		Path:     result.GetPath(),
		Content:  result.GetContent(),
	}, nil
}

// ---------------------------------------------------------------------------
// Helpers
// ---------------------------------------------------------------------------

// generateSandboxID produces an ID like "SBX-a1b2c3d4".
func generateSandboxID() string {
	b := make([]byte, 4)
	if _, err := rand.Read(b); err != nil {
		// Fallback to uuid if crypto/rand fails (should not happen).
		return "SBX-" + strings.ReplaceAll(uuid.New().String()[:8], "-", "")
	}
	return "SBX-" + hex.EncodeToString(b)
}
